crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__preview__E402_E402_1.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E402 [*] Module level import not at top of file
 --> E402_1.py:5:1
  |
3 | """Some other docstring."""
4 |
5 | import b
  | ^^^^^^^^
6 |
7 | """Some other docstring."""
  |
help: Move module level imports to top of file
  |
1 + import b
2 | import a
  |
note: This is an unsafe fix and may change runtime behavior

E402 [*] Module level import not at top of file
 --> E402_1.py:9:1
  |
7 | """Some other docstring."""
8 |
9 | import c
  | ^^^^^^^^
help: Move module level imports to top of file
  |
1 + import c
2 | import a
  |
note: This is an unsafe fix and may change runtime behavior
