crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__preview__E402_E402_7.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E402 [*] Module level import not at top of file
  --> E402_7.py:12:1
   |
10 | assert sys.platform in ("win32", "cygwin")
11 |
12 | import msvcrt
   | ^^^^^^^^^^^^^
   |
help: Move module level imports to top of file
   |
7  |
8  + import msvcrt
9  | import sys
10 |
11 | assert sys.platform in ("win32", "cygwin")
12 |
   - import msvcrt
   |
note: This is an unsafe fix and may change runtime behavior
